--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.7",
     "@react-oauth/google": "^0.12.2",
-    "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
@@ -26,16 +25,20 @@
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.536.0",
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-tsparticles": "^2.12.2",
     "sonner": "^2.0.7",
     "tsparticles": "^3.9.1",
     "twilio": "^5.8.0",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "@vitejs/plugin-react": "^4.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
