--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-  "dev": "vite",
-  "build": "node --no-warnings ./node_modules/vite/bin/vite.js build",
-  "preview": "node ./node_modules/vite/bin/vite.js preview"
-
+    "dev": "vite",
+    "build": "node --no-warnings ./node_modules/vite/bin/vite.js build",
+    "preview": "node ./node_modules/vite/bin/vite.js preview"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.7",
     "@react-oauth/google": "^0.12.2",
+    "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
@@ -25,6 +25,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "mongoose": "^8.17.1",
@@ -38,8 +39,7 @@
     "sonner": "^2.0.7",
     "tsparticles": "^3.9.1",
     "twilio": "^5.8.0",
-    "vite": "^7.0.6",
-    "@vitejs/plugin-react": "^4.7.0"
+    "vite": "^7.0.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
