--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
-    "sonner": "^2.0.7"
+    "multer-storage-cloudinary": "^4.0.0",
+    "sonner": "^2.0.7",
+    "streamifier": "^0.1.1"
   }
 }
