--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.1",
     "react-tsparticles": "^2.12.2",
     "sonner": "^2.0.7",
